-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
Qt Creator 4.15.0
-
None
-
linux fedora, gcc 11
I was debugging Creator inside Creator. I set one breakpoint (in a main thread) and it stopped there. Then I was just playing in GUI, and didn't do any stepping or continuing. I've selected couple of lines from the call stack and I wanted to copy them. In meantime it crashed.
Call stack from the crash (I've cut 8530 similar frames):
#8530 0x00007ff91106f1ca in Debugger::Internal::GdbMi::parseList (this=0x7ffd7c33a080, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #8531 0x00007ff91106eea8 in Debugger::Internal::GdbMi::parseValue (this=0x7ffd7c33a080, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #8532 0x00007ff91106e2ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7ffd7c33a080, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #8533 0x00007ff91106f1ca in Debugger::Internal::GdbMi::parseList (this=0x7ffd7c33a1b0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #8534 0x00007ff91106eea8 in Debugger::Internal::GdbMi::parseValue (this=0x7ffd7c33a1b0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #8535 0x00007ff91106e2ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7ffd7c33a1b0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #8536 0x00007ff91106f1ca in Debugger::Internal::GdbMi::parseList (this=0x7ffd7c33a2e0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #8537 0x00007ff91106eea8 in Debugger::Internal::GdbMi::parseValue (this=0x7ffd7c33a2e0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #8538 0x00007ff91106e2ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7ffd7c33a2e0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #8539 0x00007ff91106f1ca in Debugger::Internal::GdbMi::parseList (this=0x7ffd7c33a410, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #8540 0x00007ff91106eea8 in Debugger::Internal::GdbMi::parseValue (this=0x7ffd7c33a410, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #8541 0x00007ff91106e2ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7ffd7c33a410, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #8542 0x00007ff91106f1ca in Debugger::Internal::GdbMi::parseList (this=0x7ffd7c33a598, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #8543 0x00007ff91106eea8 in Debugger::Internal::GdbMi::parseValue (this=0x7ffd7c33a598, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #8544 0x00007ff91106e2ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7ffd7c33a598, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #8545 0x00007ff91106ff92 in Debugger::Internal::GdbMi::fromString (this=0x7ffd7c33a598, ba=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:413 #8546 0x00007ff91109e589 in Debugger::Internal::GdbEngine::handleResponse (this=0x9d632c0, buff=...) at /home/jarek/dev/creator-415/src/plugins/debugger/gdb/gdbengine.cpp:421 #8547 0x00007ff9110a0cb1 in Debugger::Internal::GdbEngine::readGdbStandardOutput (this=0x9d632c0) at /home/jarek/dev/creator-415/src/plugins/debugger/gdb/gdbengine.cpp:666 #8548 0x00007ff9110e8e2a in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Debugger::Internal::GdbEngine::*)()>::call(void (Debugger::Internal::GdbEngine::*)(), Debugger::Internal::GdbEngine*, void**) (f=(void (Debugger::Internal::GdbEngine::*)(Debugger::Internal::GdbEngine * const)) 0x7ff9110a0b30 <Debugger::Internal::GdbEngine::readGdbStandardOutput()>, o=0x9d632c0, arg=0x7ffd7c33ab10) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #8549 0x00007ff9110e7485 in QtPrivate::FunctionPointer<void (Debugger::Internal::GdbEngine::*)()>::call<QtPrivate::List<>, void>(void (Debugger::Internal::GdbEngine::*)(), Debugger::Internal::GdbEngine*, void**) (f=(void (Debugger::Internal::GdbEngine::*)(Debugger::Internal::GdbEngine * const)) 0x7ff9110a0b30 <Debugger::Internal::GdbEngine::readGdbStandardOutput()>, o=0x9d632c0, arg=0x7ffd7c33ab10) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #8550 0x00007ff9110e424b in QtPrivate::QSlotObject<void (Debugger::Internal::GdbEngine::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x982b770, r=0x9d632c0, a=0x7ffd7c33ab10, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #8551 0x00007ff938fd4bc9 in QtPrivate::QSlotObjectBase::call (this=0x982b770, r=0x9d632c0, a=0x7ffd7c33ab10) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #8552 0x00007ff9390142b2 in doActivate<false> (sender=0x9d63450, signal_index=15, argv=0x7ffd7c33ab10) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #8553 0x00007ff93900dca9 in QMetaObject::activate (sender=0x9d63450, m=0x7ff9393b1f20 <QProcess::staticMetaObject>, local_signal_index=6, argv=0x7ffd7c33ab10) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #8554 0x00007ff938f2b3b7 in QProcess::readyReadStandardOutput (this=0x9d63450, _t1=...) at .moc/moc_qprocess.cpp:367 #8555 0x00007ff938f2865e in QProcessPrivate::tryReadFromChannel (this=0x982ae40, channel=0x982af50) at /home/jarek/dev/qt-515/qtbase/src/corelib/io/qprocess.cpp:1073 #8556 0x00007ff938f286d2 in QProcessPrivate::_q_canReadStandardOutput (this=0x982ae40) at /home/jarek/dev/qt-515/qtbase/src/corelib/io/qprocess.cpp:1084 #8557 0x00007ff938f2ab8d in QProcess::qt_static_metacall (_o=0x9d63450, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7ffd7c33ae20) at .moc/moc_qprocess.cpp:208 #8558 0x00007ff93901434b in doActivate<false> (sender=0xd2a93f0, signal_index=3, argv=0x7ffd7c33ae20) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3898 #8559 0x00007ff93900dca9 in QMetaObject::activate (sender=0xd2a93f0, m=0x7ff9393b43a0 <QSocketNotifier::staticMetaObject>, local_signal_index=0, argv=0x7ffd7c33ae20) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #8560 0x00007ff93901d80f in QSocketNotifier::activated (this=0xd2a93f0, _t1=..., _t2=QSocketNotifier::Read, _t3=...) at .moc/moc_qsocketnotifier.cpp:178 #8561 0x00007ff93901d371 in QSocketNotifier::event (this=0xd2a93f0, e=0x7ffd7c33b640) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qsocketnotifier.cpp:302 #8562 0x00007ff93a052ba3 in QApplicationPrivate::notify_helper (this=0x21cdfc0, receiver=0xd2a93f0, e=0x7ffd7c33b640) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3637 #8563 0x00007ff93a04ff93 in QApplication::notify (this=0x7ffd7c33bb10, receiver=0xd2a93f0, e=0x7ffd7c33b640) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2977 #8564 0x00007ff938fc366c in QCoreApplication::notifyInternal2 (receiver=0xd2a93f0, event=0x7ffd7c33b640) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064 #8565 0x00007ff938fc4034 in QCoreApplication::sendEvent (receiver=0xd2a93f0, event=0x7ffd7c33b640) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1462 #8566 0x00007ff939052963 in socketNotifierSourceDispatch (source=0x2291f10) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:107 #8567 0x00007ff935ae64cf in g_main_context_dispatch () from /lib64/libglib-2.0.so.0 #8568 0x00007ff935b3a4e8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0 #8569 0x00007ff935ae3c03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0 #8570 0x00007ff93905359c in QEventDispatcherGlib::processEvents (this=0x228d700, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #8571 0x00007ff927ae80f4 in QXcbGlibEventDispatcher::processEvents (this=0x228d700, flags=...) at /home/jarek/dev/qt-515/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:143 #8572 0x00007ff938fbfffb in QEventLoop::processEvents (this=0x7ffd7c33b910, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:139 #8573 0x00007ff938fc0305 in QEventLoop::exec (this=0x7ffd7c33b910, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:232 #8574 0x00007ff938fc3e84 in QCoreApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1375 #8575 0x00007ff939763938 in QGuiApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:1867 #8576 0x00007ff93a04f98f in QApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2829 #8577 0x000000000040ea24 in main (argc=1, argv=0x7ffd7c33c428) at /home/jarek/dev/creator-415/src/app/main.cpp:812
As you can see it apparently goes into some never ending, recursive loop.
The second, similar crash:
#9276 0x00007f9f684c42ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7fffa39e2c70, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #9277 0x00007f9f684c51ca in Debugger::Internal::GdbMi::parseList (this=0x7fffa39e2da0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #9278 0x00007f9f684c4ea8 in Debugger::Internal::GdbMi::parseValue (this=0x7fffa39e2da0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #9279 0x00007f9f684c42ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7fffa39e2da0, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #9280 0x00007f9f684c51ca in Debugger::Internal::GdbMi::parseList (this=0x7fffa39e2f28, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:302 #9281 0x00007f9f684c4ea8 in Debugger::Internal::GdbMi::parseValue (this=0x7fffa39e2f28, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:249 #9282 0x00007f9f684c42ea in Debugger::Internal::GdbMi::parseResultOrValue (this=0x7fffa39e2f28, parser=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:112 #9283 0x00007f9f684c5f92 in Debugger::Internal::GdbMi::fromString (this=0x7fffa39e2f28, ba=...) at /home/jarek/dev/creator-415/src/plugins/debugger/debuggerprotocol.cpp:413 #9284 0x00007f9f684f4589 in Debugger::Internal::GdbEngine::handleResponse (this=0x6a6d9f0, buff=...) at /home/jarek/dev/creator-415/src/plugins/debugger/gdb/gdbengine.cpp:421 #9285 0x00007f9f684f6cb1 in Debugger::Internal::GdbEngine::readGdbStandardOutput (this=0x6a6d9f0) at /home/jarek/dev/creator-415/src/plugins/debugger/gdb/gdbengine.cpp:666 #9286 0x00007f9f6853ee2a in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Debugger::Internal::GdbEngine::*)()>::call(void (Debugger::Internal::GdbEngine::*)(), Debugger::Internal::GdbEngine*, void**) (f=(void (Debugger::Internal::GdbEngine::*)(Debugger::Internal::GdbEngine * const)) 0x7f9f684f6b30 <Debugger::Internal::GdbEngine::readGdbStandardOutput()>, o=0x6a6d9f0, arg=0x7fffa39e34a0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #9287 0x00007f9f6853d485 in QtPrivate::FunctionPointer<void (Debugger::Internal::GdbEngine::*)()>::call<QtPrivate::List<>, void>(void (Debugger::Internal::GdbEngine::*)(), Debugger::Internal::GdbEngine*, void**) (f=(void (Debugger::Internal::GdbEngine::*)(Debugger::Internal::GdbEngine * const)) 0x7f9f684f6b30 <Debugger::Internal::GdbEngine::readGdbStandardOutput()>, o=0x6a6d9f0, arg=0x7fffa39e34a0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #9288 0x00007f9f6853a24b in QtPrivate::QSlotObject<void (Debugger::Internal::GdbEngine::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x7ee4d80, r=0x6a6d9f0, a=0x7fffa39e34a0, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #9289 0x00007f9f903ebbc9 in QtPrivate::QSlotObjectBase::call (this=0x7ee4d80, r=0x6a6d9f0, a=0x7fffa39e34a0) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #9290 0x00007f9f9042b2b2 in doActivate<false> (sender=0x6a6db80, signal_index=15, argv=0x7fffa39e34a0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #9291 0x00007f9f90424ca9 in QMetaObject::activate (sender=0x6a6db80, m=0x7f9f907c8f20 <QProcess::staticMetaObject>, local_signal_index=6, argv=0x7fffa39e34a0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #9292 0x00007f9f903423b7 in QProcess::readyReadStandardOutput (this=0x6a6db80, _t1=...) at .moc/moc_qprocess.cpp:367 #9293 0x00007f9f9033f65e in QProcessPrivate::tryReadFromChannel (this=0x7ee4240, channel=0x7ee4350) at /home/jarek/dev/qt-515/qtbase/src/corelib/io/qprocess.cpp:1073 #9294 0x00007f9f9033f6d2 in QProcessPrivate::_q_canReadStandardOutput (this=0x7ee4240) at /home/jarek/dev/qt-515/qtbase/src/corelib/io/qprocess.cpp:1084 #9295 0x00007f9f90341b8d in QProcess::qt_static_metacall (_o=0x6a6db80, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7fffa39e37b0) at .moc/moc_qprocess.cpp:208 #9296 0x00007f9f9042b34b in doActivate<false> (sender=0x7fca460, signal_index=3, argv=0x7fffa39e37b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3898 #9297 0x00007f9f90424ca9 in QMetaObject::activate (sender=0x7fca460, m=0x7f9f907cb3a0 <QSocketNotifier::staticMetaObject>, local_signal_index=0, argv=0x7fffa39e37b0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #9298 0x00007f9f9043480f in QSocketNotifier::activated (this=0x7fca460, _t1=..., _t2=QSocketNotifier::Read, _t3=...) at .moc/moc_qsocketnotifier.cpp:178 #9299 0x00007f9f90434371 in QSocketNotifier::event (this=0x7fca460, e=0x7fffa39e3fd0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qsocketnotifier.cpp:302 #9300 0x00007f9f91469ba3 in QApplicationPrivate::notify_helper (this=0x10684a0, receiver=0x7fca460, e=0x7fffa39e3fd0) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3637 #9301 0x00007f9f91466f93 in QApplication::notify (this=0x7fffa39e4800, receiver=0x7fca460, e=0x7fffa39e3fd0) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2977 #9302 0x00007f9f903da66c in QCoreApplication::notifyInternal2 (receiver=0x7fca460, event=0x7fffa39e3fd0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064 #9303 0x00007f9f903db034 in QCoreApplication::sendEvent (receiver=0x7fca460, event=0x7fffa39e3fd0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1462 #9304 0x00007f9f90469963 in socketNotifierSourceDispatch (source=0x11384c0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:107 #9305 0x00007f9f8cefd4cf in g_main_context_dispatch () from /lib64/libglib-2.0.so.0 #9306 0x00007f9f8cf514e8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0 #9307 0x00007f9f8cefac03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0 #9308 0x00007f9f9046a59c in QEventDispatcherGlib::processEvents (this=0x1131b70, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #9309 0x00007f9f7eeff0f4 in QXcbGlibEventDispatcher::processEvents (this=0x1131b70, flags=...) at /home/jarek/dev/qt-515/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:143 #9310 0x00007f9f903d6ffb in QEventLoop::processEvents (this=0x230c620, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:139 #9311 0x00007f9f903d7305 in QEventLoop::exec (this=0x230c620, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:232 #9312 0x00007f9f9200254b in ExtensionSystem::Internal::PluginManagerPrivate::shutdown (this=0x1075c20) at /home/jarek/dev/creator-415/src/libs/extensionsystem/pluginmanager.cpp:1280 #9313 0x00007f9f91ffd043 in ExtensionSystem::PluginManager::shutdown () at /home/jarek/dev/creator-415/src/libs/extensionsystem/pluginmanager.cpp:408 #9314 0x000000000041706d in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (*)()>::call(void (*&)(), void**) (f=@0x7fffa39e4398: 0x7f9f91ffd030 <ExtensionSystem::PluginManager::shutdown()>, arg=0x7fffa39e45c0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:146 #9315 0x0000000000416a9d in QtPrivate::FunctionPointer<void (*)()>::call<QtPrivate::List<>, void>(void (*)(), void*, void**) (f=0x7f9f91ffd030 <ExtensionSystem::PluginManager::shutdown()>, arg=0x7fffa39e45c0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:209 #9316 0x0000000000416068 in QtPrivate::QStaticSlotObject<void (*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x2989e50, r=0x7fffa39e47d0, a=0x7fffa39e45c0, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject_impl.h:90 #9317 0x00007f9f903ebbc9 in QtPrivate::QSlotObjectBase::call (this=0x2989e50, r=0x7fffa39e47d0, a=0x7fffa39e45c0) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #9318 0x00007f9f9042b2b2 in doActivate<false> (sender=0x7fffa39e4800, signal_index=3, argv=0x7fffa39e45c0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #9319 0x00007f9f90424ca9 in QMetaObject::activate (sender=0x7fffa39e4800, m=0x7f9f907cac40 <QCoreApplication::staticMetaObject>, local_signal_index=0, argv=0x7fffa39e45c0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #9320 0x00007f9f903df035 in QCoreApplication::aboutToQuit (this=0x7fffa39e4800, _t1=...) at .moc/moc_qcoreapplication.cpp:254 #9321 0x00007f9f903daf3d in QCoreApplicationPrivate::execCleanup (this=0x10684a0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1395 #9322 0x00007f9f903daeb8 in QCoreApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1379 #9323 0x00007f9f90b7a938 in QGuiApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:1867 #9324 0x00007f9f9146698f in QApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2829 #9325 0x000000000040ea24 in main (argc=1, argv=0x7fffa39e5118) at /home/jarek/dev/creator-415/src/app/main.cpp:812
- is duplicated by
-
QTCREATORBUG-25791 Crash in debug mode
-
- Closed
-