Debugger: Make GDBMI parser more robust

Task-number: QTCREATORBUG-25745
Change-Id: I1a4f89fc72433548d44461c3c7c02bd53708d12d
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>